<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Share.FullScreenImageActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorTrans"
        android:id="@+id/show_image_header">

        <ImageView
            android:id="@+id/backToPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_arrow_back_black_24dp"
            app:tint="@color/colorPrimary"/>

        <TextView
            android:id="@+id/photo_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nyakalla"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginEnd="10dp"
            android:layout_centerVertical="true"
            android:textColor="@color/colorPrimary"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:scaleType="fitXY"
                android:id="@+id/capturedImage"
                android:contentDescription="@string/camera_preview" />

            <EditText
                android:id="@+id/photo_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                android:layout_below="@id/capturedImage"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/share_experience"
                android:inputType="textMultiLine|textNoSuggestions"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textColorHint="@color/white_greyish" />


            <LinearLayout
                android:id="@+id/audience_set"
                android:layout_below="@id/photo_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/audience"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        android:text="Choose Audience"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_baseline_vpn_lock_24"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="10dp"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/audience_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Public"
                    android:layout_marginStart="15dp"/>

                <View
                    android:layout_marginTop="15dp"
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:id="@+id/audience_divider"
                    android:background="@color/white_greyish" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/people_tag"
                android:layout_below="@id/audience_set"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tag_people"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="15dp"
                            android:text="@string/tag_friends"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold"
                            android:textSize="16sp" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_baseline_people_24"
                            android:layout_marginTop="15dp"
                            android:layout_marginStart="10dp"/>
                    </LinearLayout>

                    <HorizontalScrollView
                        android:id="@+id/tagged_people"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scrollbars="none"
                        android:visibility="gone">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/tagged_person"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    </HorizontalScrollView>

                </LinearLayout>

                <View
                    android:layout_marginTop="15dp"
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="@color/white_greyish" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/store_tag"
                android:layout_below="@id/people_tag"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tag_store"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="15dp"
                        android:text="@string/check_in"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        android:textSize="16sp"/>

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_store_dark"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="10dp"
                        app:tint="@color/colorPrimaryDark"/>

                </LinearLayout>

                <include layout="@layout/tagged_item_layout"/>

            </LinearLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>